# Books

./: README.rst  docker-compose.yaml  dockerfile  pyproject.toml
source/: app-fast.py  app.py
source/config/: env.py  mongodb.py  postgresdb.py
source/controllers/: book_fast.py  book_flask.py
source/models/book/: base.py  fake.py  mongo.py  postgres.py
source/services/: book.py
source/tests/: test_fixture.py  test_mongo.py  test_service_book.py
source/views/: book.py
