[tool.poetry]
name = "mvc"
version = "0.1.0"
description = ""
authors = ["pedro <pluvet01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.3"
motor = "^3.0.0"
Flask-PyMongo = "^2.3.0"
sentry-sdk = {extras = ["flask"], version = "^1.9.1"}
uuid = "^1.30"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mock = "^3.8.2"
mock = "^4.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
